chore: cleanup and readme updates